libycp/testsuite/tests/types/Typedef.ycp
{
  // defined types
  typedef list <string> myType;
  myType mt = ["a","b"];
  return mt;
}

{
  // defined types
  typedef list <path> myType;
  myType mt = [.p.a.t.h];
  // implicit return; (void)
}

{
  // defined types
  typedef list <list <path> > myType;
  myType mt = [[.p.a.t.h]];
}


{
  // defined types
  typedef list <list <path> > myType;
  myType mt = [.p.a.t.h];	// error
}



